Node Editor: Unfreed memory after link insert when resizing or rotating #103068

Closed
opened 2022-12-09 13:56:33 +01:00 by Leon Schittek · 4 comments
Member

System Information
Operating system: macOS-11.6.5-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.9

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-07 13:47, hash: 4d05a000cb
Could also reproduce in 2.93

Short description of error
When nodes are transformed using "Resize" or "Rotate" and are inserted on node links by that, there is unfreed memory after quitting blender.

Exact steps for others to reproduce the error

  1. Open the attached blend file.
  2. Transform the selected node with the "Resize" or "Rotate" operator (shortcut {key S} or {key R})
  3. The node will be inserted on the underlying node link.
  4. Quitting blender will show unfreed memory.

node-resize-bug.blend

Further Info
The NodeInsertOfsData is only freed by node_insert_offset_modal but it seems like this function is never called when resizing/rotating nodes.
In a debug build this triggers the following assert in node_relationships.cc line 2057:

BLI_assert(snode.runtime->iofsd == nullptr);

Video
node-resize-bug.mp4

**System Information** Operating system: macOS-11.6.5-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.9 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-07 13:47, hash: `4d05a000cb` Could also reproduce in 2.93 **Short description of error** When nodes are transformed using "Resize" or "Rotate" and are inserted on node links by that, there is unfreed memory after quitting blender. **Exact steps for others to reproduce the error** 1. Open the attached blend file. 2. Transform the selected node with the "Resize" or "Rotate" operator (shortcut {key S} or {key R}) 3. The node will be inserted on the underlying node link. 4. Quitting blender will show unfreed memory. [node-resize-bug.blend](https://archive.blender.org/developer/F14046634/node-resize-bug.blend) **Further Info** The `NodeInsertOfsData` is only freed by `node_insert_offset_modal` but it seems like this function is never called when resizing/rotating nodes. In a debug build this triggers the following assert in `node_relationships.cc` line 2057: ``` BLI_assert(snode.runtime->iofsd == nullptr); ``` --- **Video** [node-resize-bug.mp4](https://archive.blender.org/developer/F14046637/node-resize-bug.mp4)
Author
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

2.78 same....

2.78 same....
Philipp Oeser removed the
Interest
Nodes & Physics
label 2023-02-10 08:43:27 +01:00
Leon Schittek self-assigned this 2023-04-29 09:59:16 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-03 12:30:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103068
No description provided.