source/blender/editors/space_node/node_ops.cc
@@ -149,7 +149,6 @@ void ED_operatormacros_node()
                                     OPTYPE_UNDO | OPTYPE_REGISTER);
   mot = WM_operatortype_macro_define(ot, "TRANSFORM_OT_translate");
   WM_operatortype_macro_define(ot, "NODE_OT_attach");
-  WM_operatortype_macro_define(ot, "NODE_OT_insert_offset");
 
   /* NODE_OT_translate_attach with remove_on_cancel set to true. */
   ot = WM_operatortype_append_macro("NODE_OT_translate_attach_remove_on_cancel",
@@ -160,7 +159,6 @@ void ED_operatormacros_node()
   RNA_boolean_set(mot->ptr, "remove_on_cancel", true);
   RNA_boolean_set(mot->ptr, "view2d_edge_pan", true);
   WM_operatortype_macro_define(ot, "NODE_OT_attach");
-  WM_operatortype_macro_define(ot, "NODE_OT_insert_offset");
 
   /* NOTE: Currently not in a default keymap or menu due to messy keymaps
    * and tricky invoke functionality.
@@ -206,7 +204,6 @@ void ED_operatormacros_node()
                                     OPTYPE_UNDO | OPTYPE_REGISTER);
   WM_operatortype_macro_define(ot, "NODE_OT_links_detach");
   WM_operatortype_macro_define(ot, "TRANSFORM_OT_translate");
-  WM_operatortype_macro_define(ot, "NODE_OT_insert_offset");
 
   ot = WM_operatortype_append_macro("NODE_OT_move_detach_links_release",
                                     "Detach",
